--- a/source/assets/stylesheets/_text.scss
+++ b/source/assets/stylesheets/_text.scss
@@ -27,6 +27,7 @@
   font-size: 16px;
   line-height: 24px;
   color: #666;
+  margin-bottom: 30px;
 }
 .illustration + .footnote{
   margin-top: 30px;
@@ -58,4 +59,13 @@
     display: block;
     font-size: 35px;
   }
+}
+
+
+
+
+blockquote
+{
+  font-style: italic;
+  font-size: 46px;
 }
