--- a/source/assets/stylesheets/_backgrounds.scss
+++ b/source/assets/stylesheets/_backgrounds.scss
@@ -1,9 +1,142 @@
-// .bgNoteFixed {
-//   margin-top: 50px;
-//   margin-bottom: 50px;
-//   background-attachment: fixed;
-//   background-size: cover;
-// }
-// .bgNote {
-//   background-size: cover;
-// }
+.fullimg 
+{
+  background-size: cover;
+  background-repeat: no-repeat;
+  width:100%;
+}
+.no-white
+{
+  background-color: #fbf1f1;;
+}
+#patty
+{
+  background-image:image-url('patti.jpg');
+}
+#cover
+{
+  background-image:image-url('cover.jpg');
+  height:100vh;
+  background-attachment: fixed;
+}
+#yellow_bg
+{
+  background-color:#fed818;
+  position:relative;
+  height:100vh;
+  text-align:right;
+  .main-text
+  {
+    font-weight:700;
+  }
+  &:before
+  {
+    content:'';
+    width:500px;
+    height:350px;
+    background-image:image-url('40.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    position:absolute;
+    z-index:100;
+    left:0;
+    top:30%;
+  }
+}
+#alexCover
+{
+  background-image:image-url('alexCover.jpg');
+  height:100vh;
+}
+#gram
+{
+  background-image:image-url('bg_gram.jpg');
+  height:60vh;
+}
+#piano
+{
+  background-image:image-url('bg_piano.jpg');
+  height:10vh;
+}
+#red_grand
+{
+  background: linear-gradient(to bottom, #a9090c 0%,#e43e09 100%);
+  height:60vh;
+}
+#green_grand
+{
+  background:linear-gradient(to bottom, #a9a109 0%,#00730c 100%);
+  height:60vh;
+}
+#blue_grand
+{
+  background: linear-gradient(to bottom, #4e1b84 0%,#124d9f 100%);
+  height:60vh;
+}
+#movie
+{
+  background-image:image-url('bg_movie.jpg');
+  height:60vh;
+}
+.black
+{
+  background-color:black;
+  height:60vh;
+}
+#green-blue
+{
+  background-color: #081c1c;
+  height:60vh;
+}
+#elvis_bg
+{
+  background-image:image-url('elvisBg.jpg');
+  height:60vh;
+}
+#elvis_bg
+{
+  background-image:image-url('elvisBg.jpg');
+  height:60vh;
+}
+#slider_beatles
+{
+  background-color: #032623;
+  height:60vh;
+}
+#triangle
+{
+  background-image:image-url('triangle.jpg');
+  height:60vh;
+}
+#stormbg
+{
+  background-image:image-url('stormbg.jpg');
+  height:60vh;
+  border-bottom:2px solid white;
+}
+#blur
+{
+  background-image:image-url('blur.png');
+  height:60vh;
+}
+#end
+{
+  background-image:image-url('endbg.jpg');
+  height:60vh;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
