--- a/source/index.haml
+++ b/source/index.haml
@@ -1,27 +1,27 @@
 %section.fullimg#patty
   .RHZMcontainer
     %article.col-8.offset-2.white
-      %p.main-text  Музыкальная обложка&nbsp;&mdash; специфический художественный жанр изобразительного искусства, говорить о&nbsp;котором возможно исключительно в&nbsp;контексте исторического развития музыкальной индустрии в&nbsp;целом. Данная проблематика далеко выходит за&nbsp;рамки простой хронологии музыкальных жанров популярной музыки и&nbsp;андеграунда, глубоко затрагивая политический, социо-культурный аспект развития западного общества. Стилистика и&nbsp;символика жанра многообразны. Обложка музыкального альбома давала немыслимую художественную свободу ее&nbsp;создателям, зачастую ими могли быть дилетанты без художественного образования. Не&nbsp;имея строгих канонов оформления, двенадцатидюймовый конверт становился своеобразным окном в&nbsp;самые потаенные уголки общественных умонастроений, выявляя острые углы и&nbsp;социальные противоречия.
-      %blockquote.center.col-10.offset-2 «Man, if you want to see where the world's been, just look through some old album covers.»
-      %p.footnote.col-4.offset-5.center Patti Smith<br>(Record Album Art, 1978)
+      %p.main-text Музыкальная обложка&nbsp;&mdash; специфический художественный жанр изобразительного искусства, говорить о&nbsp;котором возможно исключительно в&nbsp;контексте исторического развития музыкальной индустрии в&nbsp;целом. Данная проблематика далеко выходит за&nbsp;рамки простой хронологии музыкальных жанров популярной музыки и&nbsp;андеграунда, глубоко затрагивая политический, социо-культурный аспект развития западного общества. Стилистика и&nbsp;символика жанра многообразны. Обложка музыкального альбома давала немыслимую художественную свободу ее&nbsp;создателям, зачастую ими могли быть дилетанты без художественного образования. Не&nbsp;имея строгих канонов оформления, двенадцатидюймовый конверт становился своеобразным окном в&nbsp;самые потаенные уголки общественных умонастроений, выявляя острые углы и&nbsp;социальные противоречия.
+      %blockquote.center.col-10.offset-1 «Man, if you want to see where the world's been, just look through some old album covers.»
+      %p.main-text.center Patti Smith<br>(Record Album Art, 1978)
         
 %section.fullimg#cover
 
 %section.fullimg#yellow_bg
   .RHZMcontainer
-    %article.col-7.offset-3
-      %p.main-text &laquo;Когда вы&nbsp;просматриваете коллекцию музыки на&nbsp;своем Ipod, перед вашими глазами&nbsp;&mdash; идея Алекса Штайнвайса.&raquo;
-      %p.footnote.offset-3 Пола Шер, бывший дизайнер обложек в Columbia Records,<br> ныне совладелица дизайнерского бюро Pentagram.
+    %article.col-11
+      %p.title &laquo;Когда вы&nbsp;просматриваете коллекцию музыки на&nbsp;своем Ipod, перед вашими глазами&nbsp;&mdash; идея Алекса Штайнвайса.&raquo;
+      %p.main-text.offset-3 Пола Шер, бывший дизайнер обложек в Columbia Records,<br> ныне совладелица дизайнерского бюро Pentagram.
   %img{:src => "./assets/images/alex1.jpg", :alt => "picture"}
 
-%section.fullimg
+%section.fullimg.black
   .RHZMcontainer
-    %article
+    %article.main-text.white
       .col-8
         %p.main-text Будучи молодым графическим дизайнером, он&nbsp;делает успешную карьеру в&nbsp;крупной американской звукозаписывающей компании Columbia Records и&nbsp;в&nbsp;1939 году становится ее&nbsp;главным арт-директором. Ему доверяют разработать принципиально новый подход к&nbsp;оформлению грампластинок. Штайнвайс не&nbsp;просто создает новый формат упаковки пластинок, но&nbsp;и&nbsp;впервые художественно оформляет обложку, исходя из&nbsp;принципа неразрывной связи визуального и&nbsp;музыкального образа.
       .col-4
-        %p.footnote.col-4.offset-5.center Пола Шер, бывший дизайнер обложек в Columbia Records,<br> ныне совладелица дизайнерского бюро Pentagram.
-        
+        %img{:src => "./assets/images/alexS.jpg", :alt => "picture"}
+      
 %section.fullimg.no-white
   .RHZMcontainer
     %article.col-8.offset2
@@ -38,7 +38,7 @@
 
 %section.fullimg#piano
   .RHZMcontainer
-    %article.col-8.offset2
+    %article.col-8.offset2.white
       %p.main-text В&nbsp;1948 все та&nbsp;же Columbia Records представляет на&nbsp;рынке так называемый долгоиграющий альбом (Long Play)&nbsp;&mdash; старый добрый&nbsp;LP, ставший самым ходовым форматом в&nbsp;звукозаписывающей индустрии вплоть до&nbsp;80-ых годов. Новая пластинка на&nbsp;33&nbsp;оборота вмещала почти 60&nbsp;минут непрерывного звучания. В&nbsp;это&nbsp;же время крупные лейблы следуют примеру Columbia Records и&nbsp;сотрудничают с&nbsp;такими графическими дизайнерами, как Джим Флора, Райд Майлс, Рудольф де&nbsp;Хэрэк, Нил Фуджита.
 
 %section.fullimg#red_grand
@@ -49,14 +49,15 @@
 
 %section.fullimg#movie
   .RHZMcontainer
-    %article
+    %article.main-text.white
       .col-2
         %img{:src => "./assets/images/cover1.jpg", :alt => "picture"}
       .col-6.offset-2
         %p Настоящей революцией в&nbsp;дизайне музыкальных пластинок становится стремительно развивающаяся фотография. Музыканты перестают прятаться за&nbsp;цветными абстракциями и&nbsp;изощренной типографикой, они начинают не&nbsp;просто исполнять музыку, они становятся знаковыми фигурами&nbsp;&mdash; теперь обложки пластинок украшают их&nbsp;портреты во&nbsp;всевозможных позах и&nbsp;ракурсах. Удивительно характерные и&nbsp;выразительные снимки джазовых знаменитостей делают Arnold Newman, Charles Stewart, Pete Turner, Esmond Edwards, Herman Leonard. <br><br>Одна из&nbsp;самых ранних обложек с&nbsp;использованием фотографии&nbsp;&mdash; пластинка With Love From A&nbsp;Chorus on&nbsp;LM-1815, вышедшая в&nbsp;1954.
+
 %section.fullimg.no-white
   .RHZMcontainer
-    %article.col-6.offset-3
+    %article.col-6.offset-3.main-text
       %p Эра господствующего джаза закончилась с&nbsp;выходом знакового альбома группы Bill Haley &amp;&nbsp;the Comets &laquo;Rock around the clock&raquo;. Конверт был оформлен традиционно с&nbsp;использованием коллажа и&nbsp;рисованной типографики и&nbsp;внешне все еще напоминал оформление джазового сборника, но&nbsp;музыка, звучавшая с&nbsp;пластинки, несла в&nbsp;себе колоссальный заряд энергии и&nbsp;мощи нового жанра. Всеобщий послевоенный подъем среди американской молодежи подготовил плодотворную почву для зарождающегося рок-н-ролла, который в&nbsp;полной мере мог выразить бунтарские настроения тинейджеров. Молодые американские парни и&nbsp;девушки моментально восприняли новое звучание, сделав рок-н-ролл саундтреком своего подросткового бунта. Уместной иллюстрацией тому послужит дебютная обложка набирающего популярность Элвиса Пресли. Объектив мастерски выхватывает кульминационный момент выступления, мы&nbsp;уже почти слышим этот бессмертный рок-н-ролльный бит. Напряжения добавляет жирный двухцветный гротеск по&nbsp;периметру. Разглядывая эту обложку, мы&nbsp;прикасаемся к&nbsp;настроению целого поколения.
 
 %section.fullimg.black
@@ -66,33 +67,33 @@
 
 %section.fullimg#green-blue
   .RHZMcontainer
-    %article.col-6.offset-3
+    %article.col-6.offset-3.main-text.white
       %p Анализ обложек альбомов Пресли наглядно иллюстрирует мощный, взрывной, протестный характер начала его музыкальной карьеры и&nbsp;последующее вырождение и&nbsp;превращение символа бунта в&nbsp;растиражированный образ поп-звезды. В&nbsp;конце 50-ых американский кинематограф переживает немыслимый подъем. Влияние продукта фабрики грез на&nbsp;массовую культуру трудно недооценивать, и&nbsp;тот факт, что популярный рок-музыкант делает головокружительную карьеру киноактера, тому доказательство. Поздние обложки Элвиса очень кинематографичны. Перед нами уже не&nbsp;тот бунтующий, полный энергии музыкант, играющий и&nbsp;поющий,&nbsp;&mdash; на&nbsp;нас смотрит глянцевая картинка, белозубая икона с&nbsp;идеальной прической превращается в&nbsp;предмет поклонения и&nbsp;пародирования. Энергетика протеста по&nbsp;иронии судьбы вырождается в&nbsp;символ поп-культуры, не&nbsp;чуждый пошлости и&nbsp;коммерциализации.
 
 %section.fullimg#elvis_bg
 
 %section.fullimg.no-white
   .RHZMcontainer
-    %article.col-6.offset-3
+    %article.col-6.offset-3.main-text
       %p Вместе с&nbsp;тем значение обложки растет пропорционально количеству и&nbsp;популярности музыкальных групп, а&nbsp;также пропорционально продажам их&nbsp;пластинок. Исполнителей новой экспериментальной музыки становится все больше, каждый альбом так и&nbsp;кричит со&nbsp;своей магазинной полки, в&nbsp;попытке выиграть борьбу за&nbsp;внимание потенциального покупателя. Художественным оформлением пластинок начинают интересоваться молодые студенты художественных колледжей, друзья музыкантов the Beatles, Pink Floyd, the Rolling Stones, близкие к&nbsp;их&nbsp;творческому процессу. Наглядным примером такого сотрудничества несомненно являются культовые обложка the Beatles Revolver, сделанная в&nbsp;1966 Клаусом Вурмэном и&nbsp;вышедшая через год, обложка Sgt. Pepper&rsquo;s Lonely Hearts Club Band Питера Блэйка, ставшая одной из&nbsp;самых запоминающихся и&nbsp;пародируемых иллюстраций к&nbsp;музыкальному альбому. Воистину The Beatles были эталоном во&nbsp;всем,&nbsp;&mdash; обложки пластинок The Beatles всегда были барометром вкуса и&nbsp;стиля. 
 
 %section.fullimg#slider_beatles
 
 %section.fullimg#triangle
   .RHZMcontainer
-    %article.col-6.offset-3
+    %article.col-6.offset-3.main-text
       %p 70-ые подарили истории обложки удивительного Сторма Торгерсона. Его сюрреалистический ироничный стиль узнаваем с&nbsp;тех пор, как он&nbsp;начал плотно сотрудничать с&nbsp;Pink Floyd. Будучи автором большинства их&nbsp;обложек, Сторм стал знаменитостью в&nbsp;своем жанре. Процесс создания иллюстрации у&nbsp;него всегда сопровождался грандиозными усилиями. Его обложки настоящие в&nbsp;том смысле, что горящий человек не&nbsp;фэйк и&nbsp;горит по-настоящему, армия железных кроватей, уходящая в&nbsp;перспективу морского берега не&nbsp;обманка компьютерной графики, а&nbsp;выстроена в&nbsp;ручную.  <br><br>Помимо работы с&nbsp;Pink Floyd Торгерсон оформлял альбомы Led Zeppelin, Scorpions, Genesis, Black Sabbath, Peter Gabrial, Muse, Cranberries. Учрежденная в&nbsp;1968&nbsp;году, студия Hipnosis работала 15&nbsp;лет и&nbsp;специализировалась исключительно на&nbsp;оформлении музыкальных альбомов&nbsp;&mdash; событие исключительное в&nbsp;истории дизайна музыкальных обложек, впервые дизайнеры и&nbsp;художники так пристально обратились к&nbsp;обложке.
 
 %section.fullimg#stormbg
 
 %section.fullimg.no-white
   .RHZMcontainer
-    %article.col-6.offset-3
+    %article.col-6.offset-3.main-text
       %p Культовой фигурой жанра начала 80-ых считается художник-постмодернист Питер Сэвилл. Основав независимый лейбл Factory Records, он&nbsp;как никто был близко и&nbsp;к&nbsp;миру музыки, и&nbsp;к&nbsp;миру искусства. Его деятельность не&nbsp;ограничивалась обложками, он&nbsp;рисовал плакаты, пригласительные билеты, оформлял вечеринки. Наиболее известен дизайн обложек для Joy Division, New Order, Orchestral Manoeuvers In&nbsp;The Dark. Дизайн Питера был настолько хорош, что оформление обложек для OMD стало чуть&nbsp;ли не&nbsp;более известно, чем сама музыка. Группа не&nbsp;меняет стиль до&nbsp;сих пор, а&nbsp;ретроспектива обложек OMD заслуживает отдельного внимания.
 
 %section.fullimg#blur
   .RHZMcontainer
-    %article.col-6.offset-3
+    %article.col-6.offset-3.main-text
       %p Конец 70-ых и&nbsp;начало 80-ых были эпохой расцвета обложки, закат пришелся на&nbsp;конец 80-ых, когда эра лонг-плэя закончилась появлением дешевого и&nbsp;практичного компакт-диска. Арт на&nbsp;обложке становился чем-то второстепенным, на&nbsp;диск наклеивались многочисленные логотипы, голограммы, ценник&nbsp;&mdash; картинка на&nbsp;обложке не&nbsp;будоражила, не&nbsp;рвала шаблоны цензуры, не&nbsp;становилась рупором бунтарей панк-рокеров, все это уже было, все уже случилось. Примечательно, что самые известные, самые запомнившиеся обложки, которые могли&nbsp;бы прийти на&nbsp;память, едва преодолеют временной рубеж середины 80-ых. Именно тогда музыкантам открылись новые медийные площадки для популяризации своего продукта&nbsp;&mdash; съемкам клипов отводилась львиная доля бюджета рекламной кампании выпускаемого альбома.<br><br>Эстетика 12-дюймого арта остается жить в&nbsp;малочисленной среде ценителей аналогового звука, уходя в&nbsp;прошлое, превращаясь в&nbsp;забаву городской интеллигенции. Все чаще открываются выставки, посвященные художникам-оформителям, работавшим с&nbsp;обложками,&nbsp;&mdash; музейные экспонаты, увы, достояние истории, а&nbsp;не&nbsp;живой, дышащий настроениями масс объект дизайна. Питер Сэвилл более категоричен в&nbsp;выводах, заявляя о&nbsp;смерти музыкальной обложки. В&nbsp;какой-то степени можно с&nbsp;ним согласиться,&nbsp;&mdash; разноцветные картинки медиатеки iTunes едва&nbsp;ли могут произвести впечатление, сравнимое с&nbsp;тем, что испытывал счастливый обладатель пластинки The Rolling Stones Sticky Fingers,&nbsp;&mdash; молния на&nbsp;фотоснимке Энди Уорхола была настоящей, ее&nbsp;можно было открыть.<br><br>Вопрос о&nbsp;будущем обложки остается открытым. С&nbsp;развитием веб-технологий, смартфонов и&nbsp;приложений дополненной реальности музыкальная обложка имеет все шансы преобразиться, приобрести новый интерактивный формат. Тем не&nbsp;менее таким, каким мы&nbsp;его знали и&nbsp;запомнили, cover art уже никогда не&nbsp;будет.
 
 %section.fullimg#end
