--- a/source/assets/stylesheets/_backgrounds.scss
+++ b/source/assets/stylesheets/_backgrounds.scss
@@ -6,7 +6,7 @@
 }
 .no-white
 {
-  background-color: #fbf1f1;;
+  background-color: #fbf1f1;
 }
 #patty
 {
@@ -42,6 +42,10 @@
     top:30%;
   }
 }
+#blue
+{
+ background: linear-gradient(to right, black 0%,black 71%,#000000 71%,#0166b3 29%,#0166b3 100%);
+}
 #alexCover
 {
   background-image:image-url('alexCover.jpg');
@@ -50,7 +54,7 @@
 #gram
 {
   background-image:image-url('bg_gram.jpg');
-  height:60vh;
+  height:85vh;
 }
 #piano
 {
@@ -59,36 +63,55 @@
 #red_grand
 {
   background: linear-gradient(to bottom, #a9090c 0%,#e43e09 100%);
-  height:60vh;
+  .pic_row
+  {
+    background-image:image-url('collage.jpg');
+  }
 }
 #green_grand
 {
   background:linear-gradient(to bottom, #a9a109 0%,#00730c 100%);
-  height:60vh;
+  .pic_row
+  {
+    background-image:image-url('collage1.jpg');
+  }
 }
 #blue_grand
 {
   background: linear-gradient(to bottom, #4e1b84 0%,#124d9f 100%);
-  height:60vh;
+  .pic_row
+  {
+    background-image:image-url('collage2.jpg');
+  }
+}
+#red_grand,
+#green_grand,
+#blue_grand
+{
+  padding-top: 55px;
+  padding-bottom: 50px;
+  height: 500px;
 }
 #movie
 {
   background-image:image-url('bg_movie.jpg');
-  height:60vh;
   .main-text
   {
     font-size: 24px;
   }
 }
-.black
+#black
 {
   background-color:black;
-  height:60vh;
+  img
+  {
+    display:block;
+    margin:10px;
+  }
 }
 #green-blue
 {
   background-color: #081c1c;
-  height:60vh;
 }
 #elvis_bg
 {
@@ -103,29 +126,27 @@
 #slider_beatles
 {
   background-color: #032623;
-  height:60vh;
 }
 #triangle
 {
   background-image:image-url('triangle.jpg');
-  height:60vh;
 }
 #stormbg
 {
   background-image:image-url('stormbg.jpg');
   height:60vh;
-  border-bottom:2px solid white;
 }
 #blur
 {
   background-image:image-url('blur.png');
-  height:60vh;
 }
 #end
 {
   background-image:image-url('endbg.jpg');
   height:60vh;
 }
+
+
 
 
 
