--- a/source/assets/stylesheets/_text.scss
+++ b/source/assets/stylesheets/_text.scss
@@ -61,7 +61,6 @@
   }
 }
 
-
 .fullimg
 {
   -webkit-font-smoothing: antialiased;
@@ -76,6 +75,12 @@
   .title
   {
     font-size: 32px;
+  }
+  h1
+  {
+    font-size: 42px;
+    margin: 0 auto;
+    padding: 20px;
   }
 }
 article
