--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -6,3 +6,6 @@
     .RHZMwrapper
       = yield
       = javascript_include_tag "x"
+      = javascript_include_tag "current_slider"
+      = javascript_include_tag "swiper"
+      
