--- a/source/assets/stylesheets/_common.scss
+++ b/source/assets/stylesheets/_common.scss
@@ -5,15 +5,6 @@ html, body, p{
 html, body{
   overflow-x:hidden;
 }
-body{
-  // background-image: url("../images/01.jpg");
-  // background-attachment: fixed;
-  // background-size: cover;
-  // @media (max-width: 800px) {
-  //   background-image: none;
-  // }
-
-}
 .article {
   padding: 0px !important;
 }
@@ -31,14 +22,6 @@ body{
   display: block;
   margin: 0 auto 0;
 }
-
-// .col-4 img, .col-3 img{
-//   width: 100%;
-// }
-// .col-6 p{
-//   padding-top: 15px;
-//   padding-bottom: 15px;
-// }
  @-webkit-keyframes moveSlideshow {
         0%   { 
             -webkit-transform: translateX(0); 
@@ -80,12 +63,10 @@ body{
   height: 389px;
   position: relative;
   overflow: hidden;
-  
 }
 .pic_row
 {
   width: 3197px;
-
   position: absolute;
   top: 0;
   left: 0;
@@ -98,61 +79,12 @@ body{
   -moz-animation: moveSlideshow 120s linear infinite;
   -webkit-transform: translate3d(0,0,0);
 }    
-
-    .slider 
-{
-  margin: 0 auto;
-  z-index: 9;
-  width: 1200px;
-  height: 758px;
-  overflow: hidden;
-  position: relative;
-  ul,li
-  {
-    margin:0;
-    padding:0;
-  }
-  ul 
-  {
-    width: 9999px;
-  } 
-  li 
-  {
-    list-style-type: none;
-    float: left;
-    width: 1200px;
-    height: 758px;
-    overflow:hidden;
-  }
-  .nav 
-  {
-    position: absolute;
-    left: 15px;
-    bottom: 12px;
-  }
-}
-
-
-.slider .nav span.on {
-background: #61a58c;}
-.slider .nav span
-{
-  opacity: 0.8;
-  background: #074a44;
-  margin: 0 16px 0 0;
-  width: 16px;
-  height: 16px;
-  border-radius: 8px;
-  cursor: pointer;
-  overflow: hidden;
-  display: block;
-  float: left;
-  box-shadow: 0 1px 2px #000;
-  
+// 
+.swiper-slide img{
+  width: 100%;
 }
 .swiper-container img[data-type="gif"]
 {
   width:40%;
   margin:2%;
-  
 }
