--- a/source/assets/stylesheets/_text.scss
+++ b/source/assets/stylesheets/_text.scss
@@ -92,3 +92,11 @@ blockquote
   font-style: italic;
   font-size: 46px;
 }
+
+.no-white,#piano, #green-blue,#triangle,#blur
+{
+  .RHZMcontainer
+  {
+    max-width:900px;
+  }
+}
