--- a/source/assets/stylesheets/_vars.scss
+++ b/source/assets/stylesheets/_vars.scss
@@ -50,6 +50,7 @@ $break-1: 478px;
 $break-2: 768px;
 $break-3: 1024px;
 $break-4: 1600px;
+$break-4: 1200px;
 @mixin respond-to($media) {
   @if $media == sm {
     @media only screen and (max-width: $break-1) { @content; }
@@ -59,6 +60,9 @@ $break-4: 1600px;
   }
   @if $media == tablet {
     @media only screen and (max-width: $break-3) { @content; }
+  }
+  @if $media == bigsize {
+    @media only screen and (max-width: $break-4) { @content; }
   }
   @if $media == bigsize {
     @media only screen and (max-width: $break-4) { @content; }
