--- a/source/assets/stylesheets/_bootstrap.scss
+++ b/source/assets/stylesheets/_bootstrap.scss
@@ -7,7 +7,8 @@
   clear: both; }
 .RHZMcontainer {
   margin-right: auto;
-  margin-left: auto; }
+  margin-left: auto; 
+}
 
 .clearfix:before,
 .clearfix:after,
