--- a/source/assets/stylesheets/_swiper.css
+++ b/source/assets/stylesheets/_swiper.css
@@ -171,19 +171,19 @@
   opacity: 0;
 }
 .swiper-pagination-bullet {
-  /*width: 8px;*/
-  /*height: 8px;*/
   display: inline-block;
-  /*border-radius: 100%;*/
-  /*background: #000;*/
-  /*opacity: 0.2;*/
-  width: 18px;
+  transition: border-color ease-in-out 0.2s;
+  width: 17px;
   height: 18px;
-  background: #676767;
-  margin: 4px;
-  border-radius: 50%;
+  background: #ffffff;
+  border: 1px #999 solid;
+  margin: 3px;
+  border-radius: 100%;
   cursor: pointer;
-  opacity: 0.9;
+  position:relative;
+}
+.swiper-pagination-bullet:hover {
+  border-color: #000;
 }
 .swiper-pagination-clickable .swiper-pagination-bullet {
   cursor: pointer;
@@ -193,7 +193,26 @@
 }
 .swiper-pagination-bullet-active {
   opacity: 1;
-  background: #007aff;
+  background: black;
+  width: 14px;
+  height: 14px;
+  border: 3px white solid;
+  position:relative;
+  border-radius: 100%;
+}
+.swiper-pagination-bullet-active:hover{
+  border-color: white;
+}
+.swiper-pagination-bullet-active:after {
+  content:'';
+  background: black;
+  width: 22px;
+  height: 22px;
+  position:absolute;
+  z-index:-1;
+  top:-4px;
+  left:-4px;
+  border-radius: 100%;
 }
 .swiper-pagination-white .swiper-pagination-bullet-active {
   background: #fff;
