--- a/source/index.haml
+++ b/source/index.haml
@@ -93,7 +93,7 @@
     .swiper-slide
       %img{:src => "./assets/images/slider1img3.jpg", :alt => "picture"}
     .swiper-slide
-      %img{:src => "./assets/images/slider1img4.jpg", :alt => "picture"}
+      %img{:src => "./assets/images/slider1img4.jpg", :alt => "picture", :data => {:type => "gif"}}
     .swiper-slide
       %img{:src => "./assets/images/slider1img5.jpg", :alt => "picture"}
   .swiper-pagination
@@ -110,7 +110,7 @@
     %article.col-10.offset-1
       %p.main-text.rhzm-editable Культовой фигурой жанра начала 80-ых считается художник-постмодернист Питер Сэвилл. Основав независимый лейбл Factory Records, он&nbsp;как никто был близко и&nbsp;к&nbsp;миру музыки, и&nbsp;к&nbsp;миру искусства. Его деятельность не&nbsp;ограничивалась обложками, он&nbsp;рисовал плакаты, пригласительные билеты, оформлял вечеринки. Наиболее известен дизайн обложек для Joy Division, New Order, Orchestral Manoeuvers In&nbsp;The Dark. Дизайн Питера был настолько хорош, что оформление обложек для OMD стало чуть&nbsp;ли не&nbsp;более известно, чем сама музыка. Группа не&nbsp;меняет стиль до&nbsp;сих пор, а&nbsp;ретроспектива обложек OMD заслуживает отдельного внимания.
 
-%section.fullimg.swiper-container.swiper-container-horizontal
+%section.fullimg.swiper-container2.swiper-container-horizontal
   .swiper-wrapper
     .swiper-slide
       %img{:src => "./assets/images/slider2img1.jpg", :alt => "picture"}
@@ -122,7 +122,7 @@
       %img{:src => "./assets/images/slider2img4.gif", :alt => "picture", :data => {:type => "gif"}}
     .swiper-slide
       %img{:src => "./assets/images/slider2img5.jpg", :alt => "picture"}
-  .swiper-pagination
+  .swiper-pagination2
 
 %section.fullimg#blur
   .RHZMcontainer
