--- a/source/assets/stylesheets/_vars.scss
+++ b/source/assets/stylesheets/_vars.scss
@@ -47,10 +47,10 @@ $gutter: 25px;
 
 // responsive
 $break-1: 478px;
-$break-2: 768px;
-$break-3: 1024px;
+$break-2: 500px;
+$break-3: 900px;
 $break-4: 1600px;
-$break-4: 1200px;
+$break-5: 1200px;
 @mixin respond-to($media) {
   @if $media == sm {
     @media only screen and (max-width: $break-1) { @content; }
@@ -64,8 +64,8 @@ $break-4: 1200px;
   @if $media == bigsize {
     @media only screen and (max-width: $break-4) { @content; }
   }
-  @if $media == bigsize {
-    @media only screen and (max-width: $break-4) { @content; }
+  @if $media == middlesize {
+    @media only screen and (max-width: $break-5) { @content; }
   }
   @elseif $media == desktop {
     @media only screen and (min-width: $break-3 + 1) { @content; }
